# godot-snake

./: .gitignore  CMakeLists.txt  README.md  SConstruct  vc140.idb
project/: HUD.tscn  Main.gd  Main.tscn  Menu.gd  Menu.tscn  export_presets.cfg  project.godot
project/resources/: House In a Forest Loop.ogg.import  board_tile.jpeg.import  dio-wryyy.mp3.import  gameover.wav.import  joseph-joestar-nice.wav.import  key_arrows.png.import  l10n.csv  l10n.csv.import  snake_sprite_sheet.png.import
src/: gdexample.cpp  gdexample.h  gdlibrary.cpp  snake_board.cpp  snake_board.h
src/model/: ai_util.cc  ai_util.h  board_cell_type.h  coord.cc  coord.h  direction.h  game_state.cc  game_state.h  game_status.h  grid_cell.cc  grid_cell.h  snake_game_api.h  snake_index.h  tile.h  tile_index.h  tile_index_util.cc  tile_index_util.h
test/: game_state.cc  grid_cell.cc
